--- a/Nigeria/indexNew.html
+++ b/Nigeria/indexNew.html
@@ -38,8 +38,8 @@
 			<div id="leftDiv">
 				<div id="selectorDiv">
 					<select id="productSelectPrice">
-						<option selected value="Cement Dangote">Cement Dangote</option>
-						<option value="Drink Swan Water Bottle">Drink Swan Water Bottle</option>
+						<option selected value="Cement (Dangote)">Cement (Dangote)</option>
+						<option value="Water Bottle (Drink Swan)">Water Bottle (Drink Swan)</option>
 						<option value="Maize White">Maize White</option>
 						<option value="Maize Yellow">Maize Yellow</option>
 						<option value="Rice Imported">Rice Imported</option>
