--- a/Nigeria/indexNew.html
+++ b/Nigeria/indexNew.html
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 			<div id='textDiv'>
-				<p id = 'text'>Intro Para explaining the purpose of this interface (4 lines). Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+				<p id = 'text'>Nigeria is administratively divided into 36 and one Federal Capital Territory (FCT). This dashboard uses price observations from 327 markets across the country.</p>
 				<p id = 'text'>The three charts on this tab present price data for a commodity at different levels of aggregation.</p>
 				<p>The <strong>map</strong> shows the average of all the price observations across the selected time-period. The <strong>line chart</strong> represents the monthly average price for each state during the selected time period. The <strong>histogram</strong> show the observed prices from each location for the entire selected time period for a particular commodity</p>
 				<p>Hovering over a state would show data on the state and corresponding observations in the histogram and the line chart. The same is true for the line chart.</p>
